--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                              0 0 80px #fff,
                              0 0 120px #fff;
             }
+            .button1 {
+                color: white;
+                font-family: ZombieHolocaust;
+                font-size: 45px;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                text-shadow: 0 0 10px #fff,
+                             0 0 20px #fff,
+                             0 0 40px #fff,
+                             0 0 80px #fff,
+                             0 0 120px #fff;
+            }
 
             
         </style>
@@ -88,6 +100,10 @@
         <p class="text1">
             Hacke is my son
         </p>
+
+      <button class="button1">
+            CLICK HERE
+        </button>
         
     </body>
 </html>
