--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                 color: white;
                 font-family: ZombieHolocaust;
                 font-size: 45px;
+                background-color: none;
+                border: none;
                 margin-top: 0px;
                 margin-bottom: 0px;
                 text-shadow: 0 0 10px #fff,
