--- a/blobrunsyou2.html
+++ b/blobrunsyou2.html
@@ -100,10 +100,13 @@
                              0 0 40px #fff,
                              0 0 80px #fff,
                              0 0 120px #fff;
+                transition: font-size 0.5s;
             }
 
             .button1:hover {
                 cursor: pointer;
+                font-size: 55px;
+                transition: font-size 0.5s;
             }
 
             .discord {
