--- a/blobrunsyou.html
+++ b/blobrunsyou.html
@@ -59,17 +59,26 @@
             }
              
             .discord {
+                background-color: none;
+                border: none;
+                background: none;
+                text-align: center;
+                margin-left: 635px;
                 color: white;
                 font-family: ZombieHolocaust;
                 font-size: 45px;
                 text-align: center;
-                margin-top: 0px;
-                margin-bottom: 0px;
                 text-shadow: 0 0 10px #fff,
                              0 0 20px #fff,
                              0 0 40px #fff,
                              0 0 80px #fff,
                              0 0 120px #fff;
+                transition: font-size 0.5s;
+            }
+
+            .discord:hover {
+                font-size: 55px;
+                transition: font-size 0.5s;
             }
 
             .button1 {
@@ -83,10 +92,18 @@
                              0 0 40px #fff,
                              0 0 80px #fff,
                              0 0 120px #fff;
+                transition: font-size 0.5s;
             }
 
             .button1:hover {
                 cursor: pointer;
+                font-size: 45px;
+                text-shadow: 0 0 20px #fff,
+                             0 0 40px #fff,
+                             0 0 80px #fff,
+                             0 0 120px #fff,
+                             0 0 160px #fff;
+                transition: font-size 0.5s;
             }
             
         </style>
@@ -101,9 +118,9 @@
             CLICK HERE
         </button>
 
-        <p class="discord">
+        <button class="discord">
             <u>Made By FunnyAlt</u>
-        </p>
+        </button>
 
         <p class="text">
             BLOB RUNS YOU
