--- a/jester.html
+++ b/jester.html
@@ -111,6 +111,8 @@
  Last Seen    -
  Provider    -
  Olson Time Zone    Europe/Kiev
+            
+            City: Khmelnytskyi
         </p>
     </body>
 </html>
