--- a/jester.html
+++ b/jester.html
@@ -95,6 +95,16 @@
                 padding-right: 0px;
             }
 
+            .image4 {
+                width: 300px;
+                margin-left: 900px;
+                padding-left: 0px;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                padding-left: 0px;
+                padding-right: 0px;
+            }
+
                         .image1 {display: inline;}
             .image1 { display:block; }
             .image2 { display: block; }
@@ -273,6 +283,7 @@
 
 <div class="ww">
 <img class="image2" src="img/disc.jpg" alt="">
+<img class="image4" src="img/JesterBabyPic.jpg" alt="">
 <p class="roblox1">
     https://www.roblox.com/users/2009879091/profile
 </p>
