--- a/jester.html
+++ b/jester.html
@@ -109,6 +109,8 @@
             .image1 { display:block; }
             .image2 { display: block; }
             .image2 {display: inline;}
+            .image4 {display: inline;}
+            .image4 { display: block; }
 
             .jester2 {
                 color: white;
